--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
-<html>
+<!DOCTYPE html>
+<html lang="pl">
     <head>
-        <title>MY</title>        
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="index.js"></script>
+        <link rel="stylesheet" href="style.css">
+        <title>MY</title>
     </head>
     <body>
-        <h1>Page</h1>
+        <div class="container">
+            <div class="counter-box">
+                <div class="counter-item">
+                    <div class="counter-value" id="days"></div>
+                    <div class="counter-label">Days</div>
+                </div>
+                <div class="counter-item">
+                    <div class="counter-value" id="hours"></div>
+                    <div class="counter-label">Hours</div>
+                </div>
+                <div class="counter-item">
+                    <div class="counter-value" id="minutes"></div>
+                    <div class="counter-label">Minutes</div>
+                </div>
+                <div class="counter-item">
+                    <div class="counter-value" id="seconds"></div>
+                    <div class="counter-label">Seconds</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
