--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
     </head>
     <body>
         <div class="container">
-            <div class="counter-box">
-                <div class="counter-item">
-                    <div class="counter-value" id="days"></div>
-                    <div class="counter-label">Days</div>
+            <div id="content">
+                <div class="button-container">
+                    <button class="buttons" onclick="button1()">OLA</button>
+                    <button class="buttons" onclick="button2()">EMA</button>
                 </div>
-                <div class="counter-item">
-                    <div class="counter-value" id="hours"></div>
-                    <div class="counter-label">Hours</div>
-                </div>
-                <div class="counter-item">
-                    <div class="counter-value" id="minutes"></div>
-                    <div class="counter-label">Minutes</div>
-                </div>
-                <div class="counter-item">
-                    <div class="counter-value" id="seconds"></div>
-                    <div class="counter-label">Seconds</div>
+                <div class="counter-box">
+                    <div class="counter-item">
+                        <div class="counter-value" id="days"></div>
+                        <div class="counter-label">Days</div>
+                    </div>
+                    <div class="counter-item">
+                        <div class="counter-value" id="hours"></div>
+                        <div class="counter-label">Hours</div>
+                    </div>
+                    <div class="counter-item">
+                        <div class="counter-value" id="minutes"></div>
+                        <div class="counter-label">Minutes</div>
+                    </div>
+                    <div class="counter-item">
+                        <div class="counter-value" id="seconds"></div>
+                        <div class="counter-label">Seconds</div>
+                    </div>
                 </div>
             </div>
         </div>
