--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 </div>
                 <div class="counter-box">
                     <div class="counter-item">
+                        <div class="counter-value" id="years"></div>
+                        <div class="counter-label">Years</div>
+                    </div>
+                    <div class="counter-item">
                         <div class="counter-value" id="days"></div>
                         <div class="counter-label">Days</div>
                     </div>
