--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <div class="button-container">
                     <button class="buttons" onclick="button1()">OLA</button>
                     <button class="buttons" onclick="button2()">EMA</button>
+                    <button class="buttons" onclick="button3()">ZOO</button>
                 </div>
+                <div id="image-container" class="image-container"></div>
                 <div class="counter-box">
                     <div class="counter-item">
                         <div class="counter-value" id="years"></div>
