--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <button class="buttons" onclick="button1()">OLA</button>
                     <button class="buttons" onclick="button2()">EMA</button>
                     <button class="buttons" onclick="button3()">ZOO</button>
+                    <button class="buttons" onclick="button4()">LEK</button>
                 </div>
                 <div id="image-container" class="image-container"></div>
                 <div class="counter-box">
